--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>seba hani</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="favicon.ico">
@@ -11,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="container-fluid">
 
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="a cloud">
